Used Iterable in Repository like Spring Data; Simplified filtering.