@@ -8,14 +8,14 @@ import java.util.List;
 
 @Repository
 public class CarRepository {
-    List<Car> cars = Collections.unmodifiableList(Arrays.asList(
+    private final Iterable<Car> cars = List.of(
             new Car(1, "Avensis"),
             new Car(2, "Aygo"),
             new Car(3, "C-HR"),
             new Car(4, "RAV4"),
-            new Car(5, "Yaris")
-    ));
-    List<Car> findAll() {
+            new Car(5, "Yaris"));
+
+    Iterable<Car> findAll() {
         return cars;
     }
 }
